--- a/visor/style/basics.css
+++ b/visor/style/basics.css
@@ -2,9 +2,17 @@
   margin: 0%;
   padding: 0%;
   color: #c1c1f1;
-  background-color: #131313;
+}
+
+body,
+html {
+  height: 100%;
 }
 
 ul {
   list-style-type: none;
+}
+
+.test {
+  background-color: red;
 }
