--- a/visor/style/greeter.css
+++ b/visor/style/greeter.css
@@ -1,19 +1,22 @@
-#greeter {
+.greeter {
   top: 50%;
   left: 50%;
   position: absolute;
-  transform: translate(-50%, -50%);
+  transform: translate(-25%, -50%);
+
   display: none;
 }
 
-#greeter--container {
+.greeter--container {
   text-align: center;
 }
 
-#greeter--container__title {
+/*
+.greeter--container__title {
   font-weight: bold;
 }
 
-#greeter--container__message {
+.greeter--container__message {
   font-weight: 100;
 }
+*/
